[package]
name = "cw-zll-liquidity-pool-token"
version = "0.1.0"
authors = ["tko"]
edition = "2018"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.7" }
cw20 = { version = "0.9.1" }
cw20-base = { version = "0.9.1", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.7" }
